Improved API validations.

--- a/Shackmeets/Development/Todo.txt
+++ b/Shackmeets/Development/Todo.txt
@@ -1,11 +1,4 @@
-﻿Make google maps service more robust
-- Make the geolocation querying a little safer
-
-Implement server-side model validation
-- Find a third party validator (haven't seen one I like yet) or write a basic one (bleh)
-- Apply to all post requests
-
-Implement admin functionality
+﻿Implement admin functionality
 - Because I'm the boss
 
 Notifications
